--- a/ingress.yaml
+++ b/ingress.yaml
@@ -21,3 +21,38 @@ spec:
   - hosts:
     - myapp.example.com  # Replace with your domain
     secretName: my-tls-secret  # This should match the name of the TLS secret you created
+    ----------------------------------
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: my-alb-ingress1
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"  # Optional: Redirect HTTP to HTTPS
+spec:
+  ingressClassName: alb
+  rules:
+  - host: example.com  # Replace with your domain
+    http:
+      paths:
+      - path: /app1
+        pathType: Prefix
+        backend:
+          service:
+            name: app1-service
+            port:
+              number: 80
+      - path: /app2
+        pathType: Prefix
+        backend:
+          service:
+            name: app2-service
+            port:
+              number: 80
+  tls:
+  - hosts:
+    - example.com  # Replace with your domain
+    secretName: example-tls-secret  # This should match the name of the TLS secret you created
+
